# Claude-CursorMemoryMCP

./: .bandit  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  .yamllint  DEPLOYMENT_GUIDE.md  Dockerfile  LINTING.md  LINTING_INFRASTRUCTURE.md  LINTING_SETUP_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  PYTHON_313_UPGRADE_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  UV_MIGRATION_SUMMARY.md  VECTOR_SEARCH_OPTIMIZATIONS.md  backup_recovery_system.py  bandit_security_report.json  batch_processor.py  deploy.sh  docker-compose.yml  embedding_pipeline.py  main.py  mcp_server.py  memory_deduplicator.py  monitoring_metrics.py  mypy.ini  pyproject.toml  query_performance_tuner.py  requirements-dev.txt  requirements.txt  setup_database.py  similarity_search_optimizer.py  simple_mcp_server.py  test_connection.py  (+2 more)
.github/workflows/: ci.yml  lint.yml
app/: Dockerfile  main.py  requirements.txt
auth/: api_keys.py  middleware.py  models.py  rbac.py  security.py
compliance/: gdpr_compliance.py  privacy_guidelines.md
config/: docker-compose.yml  nginx.conf  settings.py  sse-server.json
config/grafana/provisioning/datasources/: prometheus.yml
config/nginx/: nginx.conf
config/nginx/sites-available/: mem0ai.conf  monitoring.conf
config/postgres/: postgresql.conf
config/prometheus/: alert_rules.yml  prometheus.yml
config/qdrant/: config.yaml
config/redis/: redis.conf
config/systemd/: mem0ai-backup.service  mem0ai-backup.timer  mem0ai.service
database/: secure_supabase.py
deployment/: vps_security_hardening.md
deployment/firewall/: iptables_advanced.sh  ufw_rules.sh
docs/guides/: DEPLOYMENT_GUIDE.md  QUICK_REFERENCE.md
examples/: claude_code_client.py  cursor_client.py  websocket-mcp-proxy-package.json  websocket-mcp-proxy.js  websocket_client.py
monitoring/: alert_rules.yml  alerting.py  audit_logger.py  metrics_collector.py  monitoring_metrics.py  prometheus_config.yml
scripts/: backup.sh  generate-secrets.sh  lint.sh  restore.sh  security-hardening.sh  setup-linting.sh  setup.py  ssl-setup.sh  validate-config.sh  validate_monitoring.py
security/: compliance.py  data_protection.py  encryption.py  monitoring.py  network_security.py  rate_limiting.py
src/: __init__.py  auth.py  config.py  database.py  mcp.py  memory.py  metrics.py  models.py  plugins.py  websocket.py
src/core/: backup_recovery_system.py  batch_processor.py  embedding_pipeline.py  memory_deduplicator.py
src/optimization/: query_performance_tuner.py  similarity_search_optimizer.py  vector_compression.py  vector_indexing_benchmark.py
src/utils/: __init__.py
testing/: security_testing_guide.md  security_tests.py
